fruits-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruits-gateway
  namespace: fruits
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits
  namespace: fruits
spec:
  hosts:
  - "*"
  gateways:
  - fruits-gateway
  http:
  - match:
    - uri:
        exact: /ui
    route:
    - destination:
        host: frontend
        port:
          number: 8090
